# NetSim

./: .gitignore  CMakeLists.txt  README.md  struct-report.txt
include/: config.hpp  factory.hpp  helpers.hpp  nodes.hpp  package.hpp  reports.hpp  simulation.hpp  storage_types.hpp  types.hpp
mocks/: global_functions_mock.hpp  nodes_mocks.hpp
src/: factory.cpp  helpers.cpp  nodes.cpp  package.cpp  reports.cpp  simulation.cpp  storage_types.cpp
test/: main_gtest.cpp  test_Factory.cpp  test_factory_io.cpp  test_nodes.cpp  test_package.cpp  test_reports.cpp  test_simulate.cpp  test_storage_types.cpp
